--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -6,10 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".Chat">
 
+
     <ListView
-        android:id="@+id/lvContacts"
+        android:id="@+id/list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:listitem="@layout/custom_list_text_msg"
+         >
     </ListView>
 
 
