--- a/app/src/main/res/layout/custom_list_text_msg.xml
+++ b/app/src/main/res/layout/custom_list_text_msg.xml
@@ -10,31 +10,46 @@
 
 
     <RelativeLayout
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:layout_height="67dp"
         android:layout_marginTop="10dp">
 
 
-        <LinearLayout android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginVertical="10dp">
-
-            <ImageView android:layout_height="80dp"
-                android:layout_width="80dp"
-                tools:src="@drawable/gradient_background"
-                android:layout_marginStart="20dp"
-                android:id="@+id/profile_image"/>
+        <!--        <LinearLayout-->
+        <!--            android:layout_width="86dp"-->
+        <!--            android:layout_height="79dp"-->
+        <!--            android:layout_marginVertical="10dp"-->
+        <!--            android:layout_marginEnd="24dp"-->
+        <!--            android:layout_toStartOf="@+id/content"-->
+        <!--            android:orientation="horizontal">-->
 
 
-            <LinearLayout
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginVertical="20dp"
-                android:layout_marginStart="8dp"/>
+        <!--            <ImageView-->
+        <!--                android:id="@+id/profile_image"-->
+        <!--                android:layout_width="73dp"-->
+        <!--                android:layout_height="80dp"-->
+        <!--                android:layout_marginStart="20dp"-->
+        <!--                tools:src="@drawable/gradient_background" />-->
 
-        </LinearLayout>
+        <!--            &lt;!&ndash;            <LinearLayout&ndash;&gt;-->
+        <!--            &lt;!&ndash;                android:layout_width="wrap_content"&ndash;&gt;-->
+        <!--            &lt;!&ndash;                android:layout_height="wrap_content"&ndash;&gt;-->
+        <!--            &lt;!&ndash;                android:layout_marginVertical="20dp"&ndash;&gt;-->
+        <!--            &lt;!&ndash;                android:layout_marginStart="8dp"&ndash;&gt;-->
+        <!--            &lt;!&ndash;                android:orientation="vertical" />&ndash;&gt;-->
+
+        <!--        </LinearLayout>-->
+
+
+        <ImageView
+            android:id="@+id/profile_image"
+            android:layout_width="75dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="1dp"
+            android:layout_marginEnd="24dp"
+            android:layout_toStartOf="@+id/content"
+            tools:src="@drawable/gradient_background" />
 
         <TextView
             android:id="@+id/time"
@@ -49,13 +64,25 @@
 
         <TextView
             android:id="@+id/content"
-            android:layout_width="207dp"
-            android:layout_height="47dp"
+            android:layout_width="215dp"
+            android:layout_height="37dp"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="32dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="23dp"
             android:layout_marginEnd="24dp"
+            android:layout_marginBottom="7dp"
             android:layout_toStartOf="@+id/time"
             android:background="@color/teal_200"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/sender"
+            android:layout_width="125dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="112dp"
+            android:layout_toStartOf="@+id/time"
             android:text="TextView" />
 
     </RelativeLayout>
