--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,14 +7,18 @@
     android:visibility="visible"
     tools:context=".Register">
 
+
     <EditText
         android:id="@+id/etName"
+        android:background="@drawable/rounded"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="username"
         android:inputType="textPersonName"
         android:minHeight="48dp"
+        android:textStyle="italic"
+        android:typeface="monospace"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.422"
@@ -26,10 +30,13 @@
         android:id="@+id/etUserName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/purple_200"
         android:ems="10"
         android:hint="display name"
         android:inputType="textPersonName"
         android:minHeight="48dp"
+        android:textStyle="italic"
+        android:typeface="monospace"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.422"
@@ -41,7 +48,11 @@
         android:id="@+id/etPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/purple_200"
         android:ems="10"
+        android:textStyle="italic"
+        android:typeface="monospace"
+
         android:hint="password"
         android:inputType="textPassword"
         android:minHeight="48dp"
@@ -56,9 +67,13 @@
         android:id="@+id/etConfirmPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/purple_200"
         android:ems="10"
         android:hint="Verify password"
         android:inputType="textPassword"
+        android:textStyle="italic"
+        android:typeface="monospace"
+
         android:minHeight="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
