--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,13 +10,15 @@
 
     <EditText
         android:id="@+id/etName"
-        android:background="@drawable/rounded"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/rounded"
         android:ems="10"
-        android:hint="username"
+        android:hint=" Username"
         android:inputType="textPersonName"
         android:minHeight="48dp"
+        android:textAlignment="gravity"
+        android:textAllCaps="false"
         android:textStyle="italic"
         android:typeface="monospace"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -32,7 +34,7 @@
         android:layout_height="wrap_content"
         android:background="@color/purple_200"
         android:ems="10"
-        android:hint="display name"
+        android:hint=" Display name"
         android:inputType="textPersonName"
         android:minHeight="48dp"
         android:textStyle="italic"
@@ -53,7 +55,7 @@
         android:textStyle="italic"
         android:typeface="monospace"
 
-        android:hint="password"
+        android:hint=" Password"
         android:inputType="textPassword"
         android:minHeight="48dp"
         app:layout_constraintBottom_toTopOf="@+id/etConfirmPassword"
@@ -69,7 +71,7 @@
         android:layout_height="wrap_content"
         android:background="@color/purple_200"
         android:ems="10"
-        android:hint="Verify password"
+        android:hint=" Verify password"
         android:inputType="textPassword"
         android:textStyle="italic"
         android:typeface="monospace"
