--- a/app/src/main/res/layout/custom_list_chat.xml
+++ b/app/src/main/res/layout/custom_list_chat.xml
@@ -1,70 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-    <LinearLayout
-    android:background="@drawable/gradient_background"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    >
+    android:background="@color/cool_blue">
 
 
-   <RelativeLayout
-    android:layout_height="wrap_content"
-    android:layout_width="match_parent"
-    android:layout_marginTop="10dp">
-
-
-    <LinearLayout android:layout_height="wrap_content"
-     android:layout_width="wrap_content"
-        android:orientation="horizontal"
-         android:layout_marginVertical="10dp">
-
-    <ImageView android:layout_height="80dp"
-        android:layout_width="80dp"
-        tools:src="@drawable/blue"
-        android:layout_marginStart="20dp"
-        android:id="@+id/profile_image"/>
-
-
-   <LinearLayout
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginVertical="20dp"
-        android:layout_marginStart="8dp">
+        android:layout_marginTop="10dp">
 
-    <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:id="@+id/user_name"
-        android:textStyle="bold"
-        android:textSize="25dp"
-        android:textColor="@color/white"
-        tools:text="User Name"/>
 
-    <TextView android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_marginTop="5dp"
-        android:id="@+id/last_massage"
-        android:textSize="10dp"
-        android:textColor="@color/white"
-        tools:text="Hi, how are you?"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="10dp"
+            android:orientation="horizontal">
 
-</LinearLayout>
+            <ImageView
+                android:id="@+id/profile_image"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginStart="20dp"
+                tools:src="@drawable/blue" />
 
-</LinearLayout>
 
-    <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:id="@+id/time"
-        android:textSize="15dp"
-        android:textColor="@color/white"
-        tools:text="10:00"
-        android:layout_alignParentRight="true"
-        android:padding="15dp"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="20dp"
+                android:layout_marginStart="8dp"
+                android:orientation="vertical">
 
-</RelativeLayout>
+                <TextView
+                    android:id="@+id/user_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:textSize="25dp"
+                    android:textStyle="bold"
+                    tools:text="User Name" />
+
+                <TextView
+                    android:id="@+id/last_massage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:textColor="@color/white"
+                    android:textSize="10dp"
+                    tools:text="Hi, how are you?" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:padding="15dp"
+            android:textColor="@color/white"
+            android:textSize="15dp"
+            tools:text="10:00" />
+
+    </RelativeLayout>
 
 </LinearLayout>
