--- a/app/src/main/res/layout/custom_list_text_msg.xml
+++ b/app/src/main/res/layout/custom_list_text_msg.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<LinearLayout
-    android:background="@color/white"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    >
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
 
     <RelativeLayout
@@ -72,7 +70,7 @@
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="7dp"
             android:layout_toStartOf="@+id/time"
-            android:background="@color/teal_200"
+            android:background="@color/cool_light_green"
             android:text="TextView" />
 
         <TextView
@@ -83,7 +81,8 @@
             android:layout_marginTop="0dp"
             android:layout_marginEnd="112dp"
             android:layout_toStartOf="@+id/time"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
