--- a/app/src/main/res/drawable/rounded.xml
+++ b/app/src/main/res/drawable/rounded.xml
@@ -2,11 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="15dp">
 
-    <solid android:color="@color/purple_200" />
+    <solid android:color="#E89C9C" />
     <corners
         android:bottomRightRadius="0dp"
         android:bottomLeftRadius="0dp"
         android:topLeftRadius="0dp"
         android:topRightRadius="0dp" />
-    <stroke android:width="1dip" android:color="#f06060" />
+    <stroke android:width="1dip" android:color="#000000" />
 </shape>
