--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:visibility="visible"
+    android:background="@drawable/background"
     tools:context=".Register">
 
 
@@ -32,7 +33,7 @@
         android:id="@+id/etUserName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/purple_200"
+        android:background="@drawable/rounded"
         android:ems="10"
         android:hint=" Display name"
         android:inputType="textPersonName"
@@ -50,7 +51,7 @@
         android:id="@+id/etPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/purple_200"
+        android:background="@drawable/rounded"
         android:ems="10"
         android:textStyle="italic"
         android:typeface="monospace"
@@ -69,7 +70,7 @@
         android:id="@+id/etConfirmPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/purple_200"
+        android:background="@drawable/rounded"
         android:ems="10"
         android:hint=" Verify password"
         android:inputType="textPassword"
